Remove unused files and sync project